src/style/components/_footer.scss
.crowd {
  align-items: center;
  background: url(../img/crowd.png) center bottom no-repeat;
  background-size: cover;
  display: flex;
  height: 520px;
  justify-content: center;
  left: 0;
  position: relative;
  overflow: hidden;
  width: 100%;
  z-index: 8;
  opacity: 0;
  margin-top: 20rem;
  .footer-content {
    align-self: baseline;
    text-transform: uppercase;
    text-align: center;
    // margin-top: 50px;
    // opacity: 0;
    h1 {
      font-size: 3rem;
      line-height: 5rem;
      letter-spacing: 55px;
      margin-top: 40px
    }
  }
  .dj {
    background: url(../img/dj.png) left bottom no-repeat;
    height: 410px;
    width: 100%;
    text-align: center;
    background-size: cover;
    position: absolute;
    bottom: 0;
    transition: all 0.1s linear;
  }
}

